<?xml version="1.0"?>
<package format="3">
  <name>nlohmann_json</name>
  <version>0.1.0</version>
  <description>The C++ nlohmann/json as a ROS 2 package.</description>

  <maintainer email="moortgat.pick@gmail.com"></maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
